--- a/lyric_char_generation.ipynb
+++ b/lyric_char_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,26 +123,17 @@
     "        for i in range(0, len(tokens) - seq_len):\n",
     "            seq_in = tokens[i:i+seq_len]\n",
     "            seq_out = tokens[i + seq_len]\n",
-    "            seq_data = []\n",
-    "            for c in seq_in:\n",
-    "                data_x.append(char_to_int[c])\n",
+    "            data_x.append([char_to_int[c] for c in seq_in])\n",
+    "            data_y.append(seq_out)\n",
     "\n",
     "    return data_x, data_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +211,7 @@
     "    #songs to sequences and labels\n",
     "    data_x, data_y = songs_to_supervised(seq_len, songs, chars_to_int)\n",
     "    \n",
-    "    \n",
+    "    print(data_x)\n",
     "    #reshape input to samples, timesteps, features\n",
     "    X = np.reshape(data_x, (len(data_x), seq_len, 1))\n",
     "    #normalize input\n",
@@ -280,10 +271,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running 4 experiments\n",
+      "Running 10000 sequences 5 epochs Pop 50 sequence length 4 layers vocab size exps2/_Pop directory\n"
+     ]
+    }
+   ],
    "source": [
     "data_sizes = [10000, 100000, 5000000] #num of sequences\n",
-    "epochs = [50,200]\n",
+    "epochs = [5,200]\n",
     "genres = ['Pop', 'Hip-Hop', 'Metal', 'Country']\n",
     "seq_lens = [20,50]\n",
     "layers = [4, 8] #400 units each\n",
@@ -292,8 +292,8 @@
     "\n",
     "#big dataset on all genres with different vocabulary sizes\n",
     "for g in genres:\n",
-    "    exp = {\"seqs\" : data_sizes[2],\n",
-    "           \"epochs\" : epochs[1],\n",
+    "    exp = {\"seqs\" : data_sizes[0],\n",
+    "           \"epochs\" : epochs[0],\n",
     "           \"genre\" : g,\n",
     "           \"seq_lens\" : seq_lens[1],\n",
     "           \"layers\" : layers[0],\n",
